tests/NormalTests/paczka1/fuzzy1/31163200.err
Error in line 3: Y92u3Brx3 S417 75,7
Error in line 30: bZd1Kpte7 S417 468,5
Error in line 22: Y92u3Brx3 S81 166,5
Error in line 10: eEospGyIBJr S417 79,0
Error in line 14: 39ImzMv A596 268,3
